--- a/about.html
+++ b/about.html
@@ -1,9 +1,16 @@
 ---
 title: about
-layout: default 
+layout: default
 ---
 
-<p style="margin-top: 50px">
-Thanks for coming to check out my site.
-I hope you enjoy the content.
-</p>
+<div class="offset-3 col-6">
+  <p>
+    eyo, this is jared. i am a guy with many interests, like coding, gaming, cooking, and more recently, music.
+  </p>
+  <p>
+    on this site you'll find whatever i feel like posting about, some projects, and maybe some music.
+  </p>
+  <p>
+    whatever opinions you may find are my own.
+  </p>
+</div>
