--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,14 @@ title: projects
 
 <div class="offset-3 col-6">
   Projects
-  <ul>
   {% for project in site.projects %}
-    <li>
+  <div class="row">
+    <div class="col-4">
       {{ project.name }}
+    </div>
+    <div class="col-8">
       {{ project.description }}
-    </li>
+    </div>
+  </div>
   {% endfor %}
-  </ul>
 </div>
