--- a/projects.html
+++ b/projects.html
@@ -3,16 +3,16 @@ layout: default
 title: projects 
 ---
 
-<div class="offset-3 col-6">
-  Projects
+<div class="offset-2 col-8 mt-5">
+  <h2>Projects</h2>
   {% for project in site.projects %}
-  <div class="row">
-    <div class="col-4">
-      {{ project.name }}
-    </div>
-    <div class="col-8">
-      {{ project.description }}
-    </div>
+  <div class="row project">
+      <div class="col-4">
+        {{ project.name }}
+      </div>
+      <div class="col-8">
+        {{ project.description }}
+      </div>
   </div>
   {% endfor %}
 </div>
