--- a/posts.html
+++ b/posts.html
@@ -3,22 +3,25 @@ layout: default
 title: posts
 ---
 
-<div class="offset-2 col-8 mt-5">
+<div class="offset-3 col-6 mt-5">
   <h2>Posts</h2>
-  <div class="posts-div">
-  {% for post in site.posts %}
+  {% for post in site.posts limit:3 %}
   <div class="post row mt-3 pt-2">
     <div class="col">
       <div class="row">
         <div class="col title">
-          <a href="{{ post.url }}">{{ post.title }}</a>
+          {{ post.title }}
         </div>
         <div class="col date">
-          {{ post.date | date: "%A, %B %-d, %Y" }}
+          Written on {{ post.date}}
         </div>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col">
+        {{ post.content }}
       </div>
     </div>
   </div>
   {% endfor %}
-  </div>
 </div>
